Challengor base icon and color layout

--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,6 +1,6 @@
 TEAM_ID=
 
-PRODUCT_NAME=LearningKMP
+PRODUCT_NAME=Challengor
 PRODUCT_BUNDLE_IDENTIFIER=tech.hookin.learningkmp.LearningKMP$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
